# marigold

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
src/: CMakeLists.txt  SafeQueue.hpp  bot.cpp  bot.hpp  commands.hpp  download.cpp  download.hpp  embeds.hpp  main.cpp
